--- a/k8s/cronjob.yml
+++ b/k8s/cronjob.yml
@@ -12,14 +12,18 @@ spec:
         spec:
           containers:
             - name: wcac
-              image: accesspc/website-crawl-and-check:v0.0.1
+              image: accesspc/website-crawl-and-check:v0.0.3
               volumeMounts:
                 - name: config
-                  mountPath: /app/config.yml
+                  mountPath: /app/config
                   readOnly: true
-                  subPath: config.yml
+                - name: state
+                  mountPath: /app/state
           restartPolicy: OnFailure
           volumes:
             - name: config
               configMap:
                 name: wcac-config
+            - name: state
+              persistentVolumeClaim:
+                claimName: nfs-pvc
