fix: nfs mount, naming

--- a/k8s/cronjob.yml
+++ b/k8s/cronjob.yml
@@ -26,4 +26,4 @@ spec:
                 name: wcac-config
             - name: state
               persistentVolumeClaim:
-                claimName: nfs-pvc
+                claimName: wcac-pvc
