--- a/helm/website-crawl-and-check/templates/configmap.yaml
+++ b/helm/website-crawl-and-check/templates/configmap.yaml
@@ -7,6 +7,9 @@ metadata:
 data:
   config.yml: |
     ---
+    cron:
+      seconds: {{.Values.cron.seconds}}
+
     email:
       msg:
         ok:
