feat: code cleanup

--- a/helm/website-crawl-and-check/templates/deployment.yml
+++ b/helm/website-crawl-and-check/templates/deployment.yml
@@ -46,9 +46,11 @@ spec:
           resources:
             requests:
               cpu: 20m
+              ephemeral-storage: 10Mi
               memory: 100Mi
             limits:
               cpu: 1
+              ephemeral-storage: 100Mi
               memory: 100Mi
           securityContext:
             allowPrivilegeEscalation: false
