update: sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=accesspc_website-crawl-and-check
 sonar.organization=accesspc
+sonar.projectName=website-crawl-and-check
