--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@
 sonar.projectKey=accesspc_website-crawl-and-check
 sonar.organization=accesspc
 sonar.projectName=website-crawl-and-check
+
+sonar.python.version=3.7, 3.8, 3.9, 3.10, 3.11, 3.12
